[기능 버그 수정] 트렐로 버그 수정 및 개선사항 추가 - 기본적인 기능 동작 테스트 완료 - 리스트 로딩 중 탭 변경 못하게 막음 - 글 등록 하나만 할 수 있게 변경

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -30,7 +30,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Service \u0026 Design by 쏨컴패니 2015. All right reserved"
+        android:text="Service \u0026 Design by 쏨컴파니 2015. All right reserved"
         android:textSize="10sp"
         android:textColor="#c2c2c2"
         android:layout_below="@id/btn_start"
