--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -196,6 +196,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/icon_circle"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginBottom="16dp"
