--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <item name="custom_e5e5e5" type="color">#e5e5e5</item>
     <item name="custom_999999" type="color">#999999</item>
     <item name="custom_4d4d4d" type="color">#4d4d4d</item>
+    <item name="custom_979797" type="color">#979797</item>
 
 </resources> 
