--- a/app/src/main/res/drawable/filter_option_selector.xml
+++ b/app/src/main/res/drawable/filter_option_selector.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@color/main_black"
+        android:drawable="@drawable/bg_filter_rect_black"
         android:state_selected="true" />
 
     <item
-        android:drawable="@color/white"
+        android:drawable="@drawable/bg_filter_rect_white"
         android:state_selected="false" />
 </selector>
