--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,7 +4,7 @@
     android:background="@drawable/bg_main_bw"
     tools:context=".activity.IntroActivity">
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/intro_slogan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,6 +35,6 @@
         android:textColor="#c2c2c2"
         android:layout_below="@id/btn_start"
         android:layout_marginTop="18dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"/>-->
 
 </RelativeLayout>
